# PyChat

./: .gitignore  pyproject.toml
client/: __init__.py  backend.py  chat.py  client_network.py  encryption.py  gui.py  main.py
common/: __init__.py  data.py  events.py  pubsub.py  stream.py
pychat/: start_client.py  start_server.py
pychat/client/: client.py  diffiehellman.py  encryption.py  events.py  rooms.py
pychat/client/gui/: room.py  root.py
pychat/common/: data.py  identity.py  models.py  protocol.py  pubsub.py  request.py  stream.py  utils.py
pychat/server/: diffiehellman.py  rooms.py  server.py  user.py  users.py
server/: chat_network.py  main.py  server_network.py
tests/: conftest.py
tests/common/: test_data.py  test_stream.py
