[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pychat"
version = "1.0.0"
authors = [
    {name="Jarrod Humpel", email="jarrod.humpel@gmail.com"}
]
description = "An E2E encrypted chat application"
dependencies = ["cryptography>=37.0.4"]

[project.optional-dependencies]
test = [
    "pytest>=7.1.2",
    "pytest-asyncio>=0.19.0",
    "coverage>=6.4.2",
]
